fixed width on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,6 +10,11 @@
   
   .column {
     float: left;
+    width: 50%;
+  }
+
+  .project-column {
+    float: left;
     column-width: 50%;
   }
   
